# rust-beavers

./: Cargo.toml  bouncer_stats_22_august_24.md  code_notes.txt  give_up_5jun23.txt  notes.md  notes.txt  plot_beta.ipynb  random_machines_2_august_24.md  random_machines_30_jul_24.md  rustc-panic.txt  rustfmt.toml  size3_qh_holdouts_30_july_24  size4 no largest turnaround.txt  size4_bounce_proven_only_10k_22_aug_24  size4_bounce_proven_only_2k_22_aug_24  size4_bouncer_10k_20k_300_22_august_24  size4_bouncer_not_quite_qh_holdouts_2_august_24  size4_holdouts_2_may_better_rule_guess_20747.txt  size4_right_LR_rem_24_july_24  todo.md  todo.txt  zoology.md  zoology.txt
machine_lists/: 25_machines_analyzed_from_size4_bouncer_aligned_truncated_10k_20k_300_23_august_24  60_machines_analyzed_from_size4_bouncer_more_goes_left_10k_20k_300_26_august_24  bad_size4_bouncer_2k_2k_100_22_august_24  size4_bounce_proven_only_10k_23_aug_24  size4_bounce_proven_only_3k_23_aug_24  size4_bouncer_10k_20k_300_23_august_24  size4_bouncer_3k_2k_100_23_august_24  size4_bouncer_aligned_10k_20k_300_23_august_24  size4_bouncer_aligned_3k_2k_100_23_august_24  size4_bouncer_aligned_proven_only_10k_23_aug_24  size4_bouncer_aligned_truncated_10k_20k_300_23_august_24  size4_bouncer_more_goes_left_10k_20k_300_26_august_24  size4_bouncer_too_few_right_records_10k_20k_300_26_august_24  size4_qh_holdouts_24_july_24
machine_notes/: bouncer_stats_22_august_24.md  no_goes_left_stats_26_aug_24.md  no_goes_left_stats_26_aug_24.txt  post_bouncer_stats_23_aug_24.md  post_bouncer_stats_23_aug_24.txt  (+1 more)
src/: beep.rs  (+12 more)
(+1 files in other folders)
