[package]
name = "rust_bbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defaultmap = "0.5.0"
either = "1.8.1"
insta = { version = "1.39.0", features = ["yaml"] }
itertools = "0.10.5"
nom = "7.1.3"
num = "0.4.1"
proptest = "1.1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
smallvec = "1.10.0"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
